--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.9.0",
     "env": "^0.0.2",
     "next": "15.3.2",
     "react": "^19.0.0",
